...
                        shape = MaterialTheme.shapes.small,
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.primary,
                            contentColor = MaterialTheme.colorScheme.onPrimary
                        )
                    ) {
                        Text("Login", style = MaterialTheme.typography.labelMedium)
                    }
                    Spacer(modifier = Modifier.height(12.dp))
                    TextButton(onClick = { navController.navigate("register") }) {
                        Text(
                            stringResource(R.string.create_an_account),
                            style = MaterialTheme.typography.labelMedium,
...
